--- a/web/src/app.css
+++ b/web/src/app.css
@@ -45,7 +45,7 @@ h1 {
 
 #app {
   margin: 0 auto;
-  padding:1em;
+  padding:0.5em;
   text-align: center;
   user-select:none;
 }
@@ -53,7 +53,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.4em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -63,12 +63,31 @@ button {
 }
 button:hover {
   border-color: #646cff;
+  background-color: #E9E9EC;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+input[type="color"], select {
+  display: block;
+  height:60%;
+  border: 1px solid transparent;
+  border-radius: 8px;
+}
+input[type="number"] {
+  display: block;
+  height:49%;
+  width:70px;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  background-color: #E9E9EC;
+  text-align: right;
+}
+input:hover, select:hover {
+  border-color: #646cff;
+  transition: border-color 0.25s;
+}
 /*@media (prefers-color-scheme: light) {
   :root {
     color: #213547;
