--- a/web/src/app.css
+++ b/web/src/app.css
@@ -71,9 +71,15 @@ button:focus-visible {
 }
 input[type="color"], select {
   display: block;
+  background-color: #E9E9EC;
   height:60%;
   border: 1px solid transparent;
   border-radius: 8px;
+}
+input[type="range"] {
+  display:block;
+  height:50%;
+  accent-color: black;
 }
 input[type="number"] {
   display: block;
