--- a/web/src/app.css
+++ b/web/src/app.css
@@ -71,6 +71,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 input[type="color"], select {
+  margin:auto;
   display: block;
   background-color: #E9E9EC;
   height:60%;
