Final update. Good night beauty.

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -61,6 +61,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
   font-size: 10pt;
+  color:black;
 }
 button:hover {
   border-color: #646cff;
